Correction bug CSS + version mobile panneau admin

--- a/Public/css/frontStyle.css
+++ b/Public/css/frontStyle.css
@@ -137,7 +137,7 @@ input[type=input]{
 
 .header p{
     color: white;
-    margin-top:175px;
+    margin-top:150px;
     font-size:2.5vw;
     font-family: 'Ananda', Arial, serif;
 
